[package]
name = "rustysock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.*"
bytes = "1.2.*"
socks5-proto = "0.3.*"
socks5-server = "0.8.2"
tokio = { version = "1.20.*", features = ["net", "macros", "rt-multi-thread"] }
